[package]
name = "lockbook-crypto"
version = "0.1.0"
edition = "2018"

[dependencies]
aead = "0.4.2"
aes-gcm = "0.9.3"
bincode = "1.2.1"
libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
sha2 = "0.9.0"
hmac = "0.11.0"
rand = "0.8.4"
lockbook-models = { path = "../models" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde_json = "1.0.44"
