[package]
name = "lockbook-models"
version = "0.1.0"
authors = ["raayan <raayan@raayanpillai.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
libsecp256k1 = "0.5.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
bincode = "1.2.1"