[package]
name = "lockbook-models"
version = "0.1.0"
authors = ["raayan <raayan@raayanpillai.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
base64-serde = "0.6.1"
rand = "0.7"
reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
libsecp256k1 = "0.5.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
bincode = "1.2.1"