[package]
name = "lockbook-models"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
base64-serde = "0.6.1"
rand = "0.8.4"
http = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
libsecp256k1 = "0.7.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
bincode = "1.2.1"
