[package]
name = "lockbook-shared"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
base64-serde = "0.6.1"
rand = "0.8.4"
http = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
libsecp256k1 = "0.7.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
aead = "0.4.2"
aes-gcm = "0.9.3"
bincode = "1.2.1"
sha2 = "0.9.9"
hmac = "0.11.0"
hmdb = "0.2.2"
tracing = "0.1.5"
flate2 = "1.0"
diffy = "0.2.0"

[dev-dependencies]
bincode = "1.2.1"
test_utils = { path = "../test_utils" }
