[package]
name = "lb_editor"
version = "0.7.6"
edition = "2021"

[features]
debug-window = ["eframe"]

[lib]
name = "egui_content_pane"
crate-type = ["lib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "egui"
path = "src/main.rs"

[dependencies]
egui = "0.22.0"
image = "0.24"
libc = "0.2"
pulldown-cmark = { version = "0.9.2", default-features = false }
reqwest = { version = "0.11", features = ["blocking"] }
unicode-segmentation = "1.10.0"
rand = "0.8.5"

#eframe = { version = "0.19.0", optional = true, default-features = false, features = ['wgpu', 'dark-light'] }
eframe = { version = "0.22.0", optional = true }

